--- a/styles/base.css
+++ b/styles/base.css
@@ -23,11 +23,19 @@
 
 .nav {
     background: rgb(9, 75, 105);
+    min-height: 5.2rem;
+   
+
 
     .contents {
         display: flex;
         flex-direction: column;
         list-style-type: none;
+        margin: 0;
+        opacity: 0;
+        height: 0rem;
+        overflow-y: hidden;
+        transition: all 300ms;
 
         .item {
             padding: 1.6rem 2rem;
@@ -129,6 +137,7 @@
         }
     }
 }
+
 
 .footer {
     background: rgb(15, 15, 15);
