--- a/styles/base.css
+++ b/styles/base.css
@@ -20,7 +20,13 @@
         }
     }
 }
-
+#mode {
+	position: absolute;
+	top: 1rem;
+	right: 1rem;
+	font-size: 3rem;
+	cursor: pointer;
+}
 .nav {
     background: rgb(9, 75, 105);
 
